# Feature_Geometry_Visualization

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  ruff.toml
figures/code/: attn_vs_mlp_pca.py  attn_vs_mlp_umap.py  layerwise.py  seq_pos.py
notebooks/: layerwise_norms.ipynb  sequencewise_norms.ipynb  token_norm_hist.ipynb
src/: utils.py
src/analysis/: utils.py  visualize.py
src/generation/: data.py  dim_reduct.py  extract.py  hook.py  loader.py  main.py  permute.py  pickles.py  utils.py
src/lsdata/: LatentStates.py  metadata.py  utils.py
